# SolarSystemSimulator

./: .gitignore  GUI test.py  GUI.py  README.md  app.py  classes.py  config.py  creators.py  ephemeris_data.py  functions.py  graphics.py  names.py  orbital_functions.py  pyproject.toml  pyrightconfig.json  settings.py  test_bsp.py  validate_voyager.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.ipynb_checkpoints/: Solar System Representation-checkpoint.ipynb
app_ursina/: config.py  entities.py  geometry.py  hud.py  menus.py  missions.py  simulation.py  textures.py
core/: bodies.py  ephemeris.py  export.py  flight_plan.py  integrator.py  lambert.py  mission_planner.py  missions.py  moon_transfer.py  physics.py  propagator.py  spaceship.py  time.py  trail.py  vec3.py
data/: bodies.json  missions.json  voyager1_horizons.txt  voyager2_horizons.txt
deploy/: deploy.sh  solara-backend.service
deploy/nginx/: solarasim.conf
legacy/: GUI.py  README.md  __main__.py  classes.py  creators.py  ephemeris_data.py  functions.py  graphics.py  orbital_functions.py  settings.py
scripts/: validate_voyager.py
server/: main.py  routes.py  serialization.py  session.py  session_manager.py  static_data.py  ws.py
tests/: test_ephemeris.py  test_export.py  test_flight_plan.py  test_integrator.py  test_lambert.py  test_mission_planner.py  test_missions.py  test_moon_transfer.py  test_orbit_insertion.py  test_propagator.py  test_reactionless.py  test_spaceship.py  test_trail.py
textures/: README.md
web/: index.html  package-lock.json  package.json
web/src/: main.ts  style.css
web/src/camera/: followCamera.ts
web/src/hud/: flightPlanPanel.ts  hud.ts  labels.ts  menus.ts
web/src/input/: keybindings.ts
web/src/scene/: bodies.ts  orbitLines.ts  rings.ts  ship.ts  textures.ts
(+2 files in other folders)
