[project]
name = "solara"
version = "0.1.0"
description = "Solar system simulator with spacecraft trajectory planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jplephem>=2.22",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
desktop = [
    "ursina>=8.3.0",
]
legacy = [
    "customtkinter>=5.2.2",
    "requests>=2.32",
]
