[project]
name = "solara"
version = "0.1.0"
description = "Solar system simulator with spacecraft trajectory planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jplephem>=2.22",
    "numpy>=2.0",
]

[tool.pytest.ini_options]
# The suite lives in tests/. legacy/ is the retired desktop app and includes a
# throwaway test_bsp.py smoke script that opens the (gitignored) de440t.bsp at
# import time -- collecting it fails in CI where the kernel isn't present.
# Scoping collection to tests/ keeps `pytest` with no args identical in CI and
# locally, regardless of whether the ephemeris happens to be on disk.
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
desktop = [
    "ursina>=8.3.0",
]
legacy = [
    "customtkinter>=5.2.2",
    "requests>=2.32",
]
